sass variable and nesting

--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
     <header>
         <h1>Sarker Majid => Full Stack Developer || Laravel Developer</h1>
     </header>
+    <nav>
+        <div class="container">
+            <div class="row">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <main>
         <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iste, adipisci est aut sit doloribus officia pariatur dicta ad veritatis, rerum, aperiam earum ipsa eaque natus! Omnis reprehenderit quos placeat eveniet aut laudantium. Accusamus totam temporibus dolore provident, fuga iure minima nisi eius unde tempore exercitationem laboriosam repellendus expedita. Reiciendis.`</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iste, adipisci est aut sit doloribus officia pariatur dicta ad veritatis, rerum, aperiam earum ipsa eaque natus! Omnis reprehenderit quos placeat eveniet aut laudantium. Accusamus totam temporibus dolore provident, fuga iure minima nisi eius unde tempore exercitationem laboriosam repellendus expedita. Reiciendis.`</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iste, adipisci est aut sit doloribus officia pariatur dicta ad veritatis, rerum, aperiam earum ipsa eaque natus! Omnis reprehenderit quos placeat eveniet aut laudantium. Accusamus totam temporibus dolore provident, fuga iure minima nisi eius unde tempore exercitationem laboriosam repellendus expedita. Reiciendis.`</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iste, adipisci est aut sit doloribus officia pariatur dicta ad veritatis, rerum, aperiam earum ipsa eaque natus! Omnis reprehenderit quos placeat eveniet aut laudantium. Accusamus totam temporibus dolore provident, fuga iure minima nisi eius unde tempore exercitationem laboriosam repellendus expedita. Reiciendis.`</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iste, adipisci est aut sit doloribus officia pariatur dicta ad veritatis, rerum, aperiam earum ipsa eaque natus! Omnis reprehenderit quos placeat eveniet aut laudantium. Accusamus totam temporibus dolore provident, fuga iure minima nisi eius unde tempore exercitationem laboriosam repellendus expedita. Reiciendis.`</p>
         </section>
     </main>
